# todo_app

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  todo.db
.github/workflows/: rust.yml
src/: error.rs  main.rs
templates/: index.html  todo.db
